--- a/style.css
+++ b/style.css
@@ -1,98 +1,5 @@
-* {
-    margin: 0;
-    padding: 0;
-}
+.Teste{
+  width: 100px;
+  height: 20px;
 
-html {
-    scroll-behavior: smooth;
-}
-
-#navbar {
-    position: fixed;
-    width: 100%;
-    background-image: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(44,9,121,1) 35%, rgba(8, 55, 143, 0.89) 100%);
-}
-
-#menu {
-    display: flex;
-    flex-direction: row;
-    float: right;
-}
-
-#menu li {
-    list-style: none;
-    margin: 20px;
-}
-
-#menu li a {
-    color: white;
-    text-decoration: none;
-    font-size: 1.3rem;
-    font-weight: bold;
-}
-
-#menu li a:hover {
-    color: black;
-}
-
-#mint-page {
-    height: 100vh;
-    background-color: aqua;
-}
-
-#projetistas {
-    display: flex;
-    background-color: white;
-    height: 100vh;
-    align-items: center;
-}
-
-#projetistas-container {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    justify-content: space-evenly;
-}
-
-#projetistas-box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 300px;
-    height: 400px;
-    border: 0.4rem;
-    border-radius: 10px;
-    border-color: black;
-    border-style: solid;
-    padding: 15px;
-}
-
-#projetistas-box ul li {
-    list-style: none;
-    margin: 20px;
-}
-
-#projetistas-box ul li a {
-    text-decoration: none;
-}
-
-#projetistas-box ul li a:hover {
-    color: blueviolet;
-    cursor: pointer;
-}
-
-#projetistas-nome {
-    font-size: 1.3rem;
-    font-weight: bold;
-}
-
-#projetistas-image {
-    border-radius: 50%;
-    height: 200px;
-    width: 200px;
-}
-
-#galeria {
-    background-color: red;
-    height: 100vh;
 }
