--- a/landingPage/style.css
+++ b/landingPage/style.css
@@ -10,7 +10,6 @@ html {
 #navbar {
     position: fixed;
     width: 100%;
-    background-image: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(44,9,121,1) 35%, rgba(8, 55, 143, 0.89) 100%);
 }
 
 #menu {
@@ -32,20 +31,59 @@ html {
 }
 
 #menu li a:hover {
-    color: black;
+    color: rgba(51, 10, 197, 0.945);
 }
 
 #mint-page {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
     height: 100vh;
-    background-color: aqua;
+    background: linear-gradient(0deg, rgba(2,0,36,1) 15%, rgba(44,9,121,1) 50%, rgba(8, 55, 143, 0.89) 100%);
+}
+
+#mint-container {
+    display: flex;
+    flex-direction: row;
+
+}
+
+#mint-box {
+    display: flex;
+    flex-direction: column;
+    width: 20rem;
+    align-items: center;
+}
+
+#mint-title {
+    font-size: 1.3rem;
+    text-align: center;
+    color: white;
+}
+
+#mint-button {
+    height: 30px;
+    width: 100px;
+    margin-top: 10%;
+    border-radius: 15%;
+    border-style: inherit;
+    font-weight: bold;
+    color: white;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(44,9,121,1) 35%, rgba(50, 10, 197, 0.89) 100%);
+    cursor: pointer;
+}
+
+#mint-button:hover {
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(8, 4, 65) 35%, rgba(10, 44, 197, 0.89)100%);
 }
 
 #projetistas {
     display: flex;
-    background-color: white;
+    background: linear-gradient(0deg, rgba(8, 55, 143, 0.89) 15%, rgba(44,9,121,1) 50%, rgba(2,0,36,1) 100%);
     height: 100vh;
     align-items: center;
 }
+
 
 #projetistas-container {
     display: flex;
@@ -58,7 +96,7 @@ html {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 300px;
+    width: 350px;
     height: 400px;
     border: 0.4rem;
     border-radius: 10px;
@@ -93,6 +131,6 @@ html {
 }
 
 #galeria {
-    background-color: red;
+    background: linear-gradient(0deg, rgba(2,0,36,1) 15%, rgba(44,9,121,1) 50%, rgba(8, 55, 143, 0.89) 100%);
     height: 100vh;
 }
