--- a/landingPage/style.css
+++ b/landingPage/style.css
@@ -10,6 +10,7 @@ html {
 #navbar {
     position: fixed;
     width: 100%;
+    background-color: black;
 }
 
 #menu {
@@ -31,7 +32,7 @@ html {
 }
 
 #menu li a:hover {
-    color: rgba(51, 10, 197, 0.945);
+    color: rgba(93, 59, 214, 0.945);
 }
 
 #mint-page {
@@ -77,6 +78,11 @@ html {
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(8, 4, 65) 35%, rgba(10, 44, 197, 0.89)100%);
 }
 
+#imagem1 {
+    width: 400px;
+    height: 400px;
+}
+
 #projetistas {
     display: flex;
     background: linear-gradient(0deg, rgba(8, 55, 143, 0.89) 15%, rgba(44,9,121,1) 50%, rgba(2,0,36,1) 100%);
@@ -100,7 +106,7 @@ html {
     height: 400px;
     border: 0.4rem;
     border-radius: 10px;
-    border-color: black;
+    border-color: darkgray;
     border-style: solid;
     padding: 15px;
 }
@@ -108,6 +114,7 @@ html {
 #projetistas-box ul li {
     list-style: none;
     margin: 20px;
+    color: darkgray;
 }
 
 #projetistas-box ul li a {
@@ -138,7 +145,7 @@ html {
     align-items: center;
 }
 #galeria-imagens {
-    height: 90%;
+    height: 80%;
     width: 90%;
     overflow: scroll;
     overflow-x: hidden;
