--- a/src/components/landingPage/LandingPage.css
+++ b/src/components/landingPage/LandingPage.css
@@ -10,30 +10,9 @@ html {
 #navbar {
     position: fixed;
     width: 100%;
-    background-color: black;
+    background-color: white;
 }
 
-#menu {
-    display: flex;
-    flex-direction: row;
-    float: right;
-}
-
-#menu li {
-    list-style: none;
-    margin: 20px;
-}
-
-#menu li a {
-    color: white;
-    text-decoration: none;
-    font-size: 1.3rem;
-    font-weight: bold;
-}
-
-#menu li a:hover {
-    color: rgba(93, 59, 214, 0.945);
-}
 
 #mint-page {
     display: flex;
@@ -85,7 +64,7 @@ html {
 
 #projetistas {
     display: flex;
-    background: linear-gradient(0deg, rgba(8, 55, 143, 0.89) 15%, rgba(44,9,121,1) 50%, rgba(2,0,36,1) 100%);
+    background: linear-gradient(180deg, rgba(8, 55, 143, 0.89) 15%, rgba(44,9,121,1) 50%, rgba(2,0,36,1) 100%);
     height: 100vh;
     align-items: center;
 }
@@ -144,7 +123,7 @@ html {
 }
 
 #galeria {
-    background: linear-gradient(0deg, rgba(2,0,36,1) 15%, rgba(44,9,121,1) 50%, rgba(8, 55, 143, 0.89) 100%);
+    background: linear-gradient(180deg, rgba(2,0,36,1) 15%, rgba(44,9,121,1) 50%, rgba(8, 55, 143, 0.89) 100%);
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -158,8 +137,18 @@ html {
     overflow-y: visible;
 }
 
+#galeria-imagens div{
+    display: block;
+}
+
 #galeria-imagens img{
-    width: 250px ;
+    width: 250px;
     height: 250px;
     margin: 10px;
 }
+
+#galeria-imagens button{
+    width: 20px;
+    height: 25px;
+}
+
